overflow fix

--- a/src/components/Fireworks/Fireworks.css
+++ b/src/components/Fireworks/Fireworks.css
@@ -1,6 +1,3 @@
-body {
-}
-
 .pyro > .before,
 .pyro > .after {
   transition: all 2s ease-in-out;
